Add role based auth methods